src/objects/PagesApi__Field_Response__c.object
<CustomObject>
    <description>Object used to identify the responses from form submissions.</description>
    <fields>
        <fullName>EventApi__Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link between the Field Response and the Attendee. Used to display registration question answers.</description>
        <inlineHelpText>** System Calculated ** Link between the Field Response and the Attendee. Used to display registration question answers.</inlineHelpText>
        <label>Attendee</label>
        <referenceTo>EventApi__Attendee__c</referenceTo>
        <relationshipLabel>Registration Form Details</relationshipLabel>
        <relationshipName>Field_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link between the Field Response and the Speaker. Used to display Speaker Contract &amp; Agreement information on the Speaker record.</description>
        <inlineHelpText>** System Calculated ** Link between the Field Response and the Speaker. Used to display Speaker Contract &amp; Agreement information on the Speaker record.</inlineHelpText>
        <label>Speaker</label>
        <referenceTo>EventApi__Speaker__c</referenceTo>
        <relationshipLabel>Speaker Agreement Details</relationshipLabel>
        <relationshipName>Field_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link between the Field Response and the Sponsor. Used to display Sponsor Contract &amp; Agreement information on the Sponsor record.</description>
        <inlineHelpText>** System Calculated ** Link between the Field Response and the Sponsor. Used to display Sponsor Contract &amp; Agreement information on the Sponsor record.</inlineHelpText>
        <label>Sponsor</label>
        <referenceTo>EventApi__Sponsor__c</referenceTo>
        <relationshipLabel>Sponsor Agreement Details</relationshipLabel>
        <relationshipName>Field_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Field_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to related Field Group.</description>
        <inlineHelpText>Link to related Field Group.</inlineHelpText>
        <label>Field Group</label>
        <referenceTo>PagesApi__Field_Group__c</referenceTo>
        <relationshipLabel>Field Responses</relationshipLabel>
        <relationshipName>Field_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Field__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to related Field.</description>
        <inlineHelpText>Link to related Field.</inlineHelpText>
        <label>Field</label>
        <referenceTo>PagesApi__Field__c</referenceTo>
        <relationshipLabel>Field Responses (Field)</relationshipLabel>
        <relationshipName>Field_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Form_Response__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to related Form Response.</description>
        <inlineHelpText>Link to related Form Response.</inlineHelpText>
        <label>Form Response</label>
        <referenceTo>PagesApi__Form_Response__c</referenceTo>
        <relationshipLabel>Field Responses (Form Response)</relationshipLabel>
        <relationshipName>Field_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Form__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to related Form.</description>
        <inlineHelpText>Link to related Form.</inlineHelpText>
        <label>Form</label>
        <referenceTo>PagesApi__Form__c</referenceTo>
        <relationshipLabel>Field Responses</relationshipLabel>
        <relationshipName>Field_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Field_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to related Field Group.</description>
        <inlineHelpText>** System Calculated ** Link to related Field Group.</inlineHelpText>
        <label>Field Group</label>
        <referenceTo>PagesApi__Field_Group__c</referenceTo>
        <relationshipLabel>Field Responses</relationshipLabel>
        <relationshipName>Field_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Field_Help_Text__c</fullName>
        <description>** System Calculated ** Displays the field&apos;s help text.</description>
        <formula>PagesApi__Field__r.PagesApi__Help_Text__c</formula>
        <inlineHelpText>** System Calculated ** Displays the field&apos;s help text.</inlineHelpText>
        <label>Field Help Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Field_Label__c</fullName>
        <description>** System Calculated ** Displays the parent field&apos;s label.</description>
        <formula>PagesApi__Field__r.Name</formula>
        <inlineHelpText>** System Calculated ** Displays the parent field&apos;s label.</inlineHelpText>
        <label>Field Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Field_Order__c</fullName>
        <description>** System Calculated ** Displays the order specified on the form.</description>
        <formula>PagesApi__Field__r.PagesApi__Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** Displays the order specified on the form.</inlineHelpText>
        <label>Field Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PagesApi__Field_Type__c</fullName>
        <description>** System Calculated ** Displays the field type.</description>
        <formula>TEXT(PagesApi__Field__r.PagesApi__Type__c)</formula>
        <inlineHelpText>** System Calculated ** Displays the field type.</inlineHelpText>
        <label>Field Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Required ** Identifies the value&apos;s related field.</description>
        <inlineHelpText>** System Calculated Required ** Identifies the value&apos;s related field.</inlineHelpText>
        <label>Field</label>
        <referenceTo>PagesApi__Field__c</referenceTo>
        <relationshipLabel>Field Responses</relationshipLabel>
        <relationshipName>Field_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Form_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the related Form Response for form submissions.</description>
        <inlineHelpText>Identifies the related Form Response for form submissions.</inlineHelpText>
        <label>Form Response</label>
        <referenceTo>PagesApi__Form_Response__c</referenceTo>
        <relationshipLabel>Field Responses</relationshipLabel>
        <relationshipName>Field_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Mapped_Field__c</fullName>
        <description>** System Calculated ** Displays the mapped field from the parent field.</description>
        <formula>PagesApi__Field__r.PagesApi__Mapped_Field__c</formula>
        <inlineHelpText>** System Calculated ** Displays the mapped field from the parent field.</inlineHelpText>
        <label>Mapped Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Report_Response__c</fullName>
        <description>** Use for Reporting on Responses ** The report response field trims the length of the entered response to restrict size to less than 255 chars. Currently salesforce will not allow a report to perform groupings on long text area fields.</description>
        <inlineHelpText>** Use for Reporting on Responses ** The report response field trims the length of the entered response to restrict size to less than 255 chars. Currently salesforce will not allow a report to perform groupings on long text area fields.</inlineHelpText>
        <label>Report Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Response_Group__c</fullName>
        <description>** SYSTEM FIELD DO NOT EDIT **</description>
        <inlineHelpText>** SYSTEM FIELD DO NOT EDIT **</inlineHelpText>
        <label>Response Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Response__c</fullName>
        <description>** Required ** Identifies the submitted field&apos;s value.</description>
        <inlineHelpText>** Required ** Identifies the submitted field&apos;s value.</inlineHelpText>
        <label>Response</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__System_Reference__c</fullName>
        <description>** SYSTEM FIELD  DO NOT EDIT ** Maps created object id for upsert updates.</description>
        <inlineHelpText>** SYSTEM FIELD DO NOT EDIT **  Maps created object id for upsert updates.</inlineHelpText>
        <label>System Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Field Response</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Field Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>